fix design issue for all pages

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .footer {
-  background: url("../public/images/gif-background.gif");
+  background: url("../public/images/home/Lines-5.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position-y: 0;
